--- a/wordington-diploma-in-leadership-programme.html
+++ b/wordington-diploma-in-leadership-programme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Diploma in Leadership Programme </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader1">
+    <div class="itemHeader2">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,37 +34,39 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Certificate Programme  
+            Wordington Leadership Programmes
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Certificate Programmes</div>
+                <div class="title">Graduate Diploma in Leadership</div>
                 <div>
-                    Wordington Certificate Programmes in Human Resource Management
-                    (HRM) are designed to develop and establish a strong foundation for
-                    those aiming to build up a successful career in HRM.
+                    is aimed to equip candidates with
+                    agile skills to lead organisations and the society.
                 </div>
                 <div>
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in your HRM skills. This programme is meant for beginners who are
-                    aiming for a career in HRM. A few of the Certificate Programmes is listed
-                    below:
+                    Wordington graduate diploma programmes are suitable for people
+                    working in any profession and is a great opportunity to build up and
+                    boost your leadership skills.
+                </div>
+                <div>
+                    The programme is suitable for those wishing to further develop their
+                    understanding of leadership styles so as to effectively lead others and
+                    their businesses and organisations.
+                </div>
+                <div>
+                    The Wordington graduate diploma in Leadership comprises of four units
+                    which can be credited towards Wordington Master of Leadership.
+                </div>
+                <div>
+                    The units offered are:
                 </div>
                 <div class="x-x-x">
-                    Wordington Certificate in: <br> <br>
-                    Fundamentals of Human Resource Management. <br> <br>
-                    Strategic Human Resource Management. <br> <br>
-                    Industrial Relations. <br> <br>
-                    Human Resource Planning. <br> <br>
-                    Job Design. <br> <br>
-                    Recruitment and Selection. <br> <br>
-                    Training and Development.  <br> <br>
-                    Performance Management.<br> <br>
-                    Rewards Management.<br> <br>
-                    Health and Safety.<br> <br>
-                    Managing Decision Making.<br> <br>
+                    Ethics and Leadership. <br> <br>
+                    Leading Diversity. <br> <br>
+                    Leadership and Decision Making. <br> <br>
+                    Leading Teams. <br> <br>
                 </div>
             </div>
         </div>
