--- a/wordington-doctorate-programme-in-biblical-studies.html
+++ b/wordington-doctorate-programme-in-biblical-studies.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader2">
+    <div class="itemHeader12">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,39 +34,31 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Doctorate Programme in
+            Biblical studies
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Graduate Diploma in Leadership</div>
+                <div class="title">Doctorate in Leadership </div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Doctorate is a highly specialised (2-5 years duration)
+                    programme designed for established Christian leaders.
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Please refer to <a href="#">Wordington Model</a>  to see how the research is designed.
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
+                    The Wordington doctoral programme is your unique journey through the
+                    world of Biblical knowledge and experiences interwoven.
                 </div>
                 <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
-                </div>
-                <div>
-                    The units offered are:
+                    As part of this programme you will lead by yourselves and Wordington
+                    will support you in your doctoral journey.
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Please <a href="#"> email us</a>  for more details and fees.
                 </div>
             </div>
         </div>
