--- a/wordington-doctorate-programme-in-human-resource-management.html
+++ b/wordington-doctorate-programme-in-human-resource-management.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader9">
+    <div class="itemHeader8">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,51 +34,31 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Certificate Programme in Biblical Studies
+            Wordington Doctorate Programme in Human
+            Resource Management.
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Certificate Programmes </div>
+                <div class="title">Doctorate in Leadership </div>
                 <div>
-                    Wordington Certificate Programme in Biblical studies is designed to
-                    develop and establish a strong foundation in selective knowledge,
-                    understanding and application of key Biblical concepts.
+                    Wordington Doctorate is a highly specialised (4-10 years duration)
+                    programme designed for established leaders in their chosen profession.
                 </div>
                 <div>
-                    
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in Biblical studies. This programme is meant for beginners who are
-                    aiming to build their understanding of Biblical knowledge and build a
-                    ‘call-oriented’ career in Christian ministry. A few of the Certificate
-                    Programmes is listed below:
+                    Please refer to Wordington Model to see how the research is designed.
                 </div>
-                <div class="x-x-x">
-                    Wordington Certificate in: <br> <br>
-
-                    Introduction to Old Testament. <br> <br>
-
-                    Introduction to New Testament.<br> <br>
-
-                    The Gospel of Matthew.<br> <br>
-
-                    The Gospel of Mark.<br> <br>
-
-                    The Gospel of Luke.<br> <br>
-
-                    The Gospel of John.<br> <br>
-
-                    The Acts of Apostles.<br> <br>
-
-                    Introduction to Pauline Letters.<br> <br>
-
-                    The Letters of John.<br> <br>
-
-                    The Letters of Peter.<br> <br>
-
-                    The Letter of James.<br> <br>
-                    The Book of Revelations<br> <br>
+                <div>
+                    The Wordington doctoral programme is your unique journey through the
+                    world of knowledge and experiences interwoven.
+                </div>
+                <div>
+                    As part of this programme you will lead by yourselves and Wordington
+                    will support you in your doctoral journey.
+                </div>
+                <div>
+                    Please <a href="#">email us</a>  for more details and fees.
                 </div>
             </div>
         </div>
