--- a/wordington-international-english-communication-programme.html
+++ b/wordington-international-english-communication-programme.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader3">
+    <div class="itemHeader14">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,40 +34,36 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Doctorate Programme in
+            Biblical studies
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Leadership Programmes </div>
+                <div class="title">Wordington Certificate Programme in International English Writing Skills (3 months)</div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
-                </div>
-                <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Wordington Certificate Programme in English Writing Skills is designed
+                    to develop excellent English writing skills through structural construction
+                    of sentences.
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
+                    The primary objective of this programme is to help candidates to gain
+                    confidence in communicating in English, both in the formal and informal
+                    settings. This means, this programme will equip you to write emails,
+                    send formal letters and draft business proposals, as well as excellent
+                    business communication.
                 </div>
                 <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
+                    Upon completion of this course, candidates will be able to excel in
+                    vocabulary to draft meaningful sentences and produce clear and correct
+                    writings.
                 </div>
                 <div>
-                    The units offered are:
+                    The programme involves a series of practical sessions and will help the
+                    candidates to be professional writers.
                 </div>
-                <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
-                </div>
+                <div>  Please <a href="#">email us </a> for more details and fees.</div>
             </div>
         </div>
     </div>
