--- a/wordington-leadership-certificate-programme.html
+++ b/wordington-leadership-certificate-programme.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader5">
+    <div class="itemHeader1">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,13 +34,13 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Certificate Programme in Human Resource Management
+            Wordington Leadership Certificate Programme  
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Certificate Programmes  </div>
+                <div class="title">Certificate Programmes</div>
                 <div>
                     Wordington Certificate Programmes in Human Resource Management
                     (HRM) are designed to develop and establish a strong foundation for
@@ -53,28 +53,17 @@
                     below:
                 </div>
                 <div class="x-x-x">
-                    Wordington Certificate in:
-
+                    Wordington Certificate in: <br> <br>
                     Fundamentals of Human Resource Management. <br> <br>
-
-                    Strategic Human Resource Management.<br> <br>
-
-                    Industrial Relations.<br> <br>
-
-                    Human Resource Planning.<br> <br>
-
-                    Job Design.<br> <br>
-
-                    Recruitment and Selection.<br> <br>
-
-                    Training and Development.<br> <br>
-
+                    Strategic Human Resource Management. <br> <br>
+                    Industrial Relations. <br> <br>
+                    Human Resource Planning. <br> <br>
+                    Job Design. <br> <br>
+                    Recruitment and Selection. <br> <br>
+                    Training and Development.  <br> <br>
                     Performance Management.<br> <br>
-
                     Rewards Management.<br> <br>
-
                     Health and Safety.<br> <br>
-
                     Managing Decision Making.<br> <br>
                 </div>
             </div>
