--- a/wordington-doctorate-programme-in-leadership.html
+++ b/wordington-doctorate-programme-in-leadership.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader14">
+    <div class="itemHeader4">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,36 +34,40 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Wordington Doctorate Programme in
-            Biblical studies
+            Wordington Leadership Programmes
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Certificate Programme in International English Writing Skills (3 months)</div>
+                <div class="title">Wordington Leadership Programmes </div>
                 <div>
-                    Wordington Certificate Programme in English Writing Skills is designed
-                    to develop excellent English writing skills through structural construction
-                    of sentences.
+                    is aimed to equip candidates with
+                    agile skills to lead organisations and the society.
                 </div>
                 <div>
-                    The primary objective of this programme is to help candidates to gain
-                    confidence in communicating in English, both in the formal and informal
-                    settings. This means, this programme will equip you to write emails,
-                    send formal letters and draft business proposals, as well as excellent
-                    business communication.
+                    Wordington graduate diploma programmes are suitable for people
+                    working in any profession and is a great opportunity to build up and
+                    boost your leadership skills.
                 </div>
                 <div>
-                    Upon completion of this course, candidates will be able to excel in
-                    vocabulary to draft meaningful sentences and produce clear and correct
-                    writings.
+                    The programme is suitable for those wishing to further develop their
+                    understanding of leadership styles so as to effectively lead others and
+                    their businesses and organisations.
                 </div>
                 <div>
-                    The programme involves a series of practical sessions and will help the
-                    candidates to be professional writers.
+                    The Wordington graduate diploma in Leadership comprises of four units
+                    which can be credited towards Wordington Master of Leadership.
                 </div>
-                <div>  Please <a href="#">email us </a> for more details and fees.</div>
+                <div>
+                    The units offered are:
+                </div>
+                <div class="x-x-x">
+                    Ethics and Leadership. <br> <br>
+                    Leading Diversity. <br> <br>
+                    Leadership and Decision Making. <br> <br>
+                    Leading Teams. <br> <br>
+                </div>
             </div>
         </div>
     </div>
