--- a/wordington-health-and-nursing-programmes.html
+++ b/wordington-health-and-nursing-programmes.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader6">
+    <div class="itemHeader13">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -21,7 +21,7 @@
                         <i class="fas fa-times" onclick="closeMenu()"></i>
                     </div>
                     <ul>
-                        <li><a href="../landingpage-cmp/index.html" style="color: white;">Home</a></li>
+                        <li><a href="index.html" style="color: white;">Home</a></li>
                         
                     </ul>
                 </div>
@@ -34,42 +34,32 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
-            Graduate Diploma in Human Resource Management 
+            Wordington Doctorate Programme in
+            Biblical studies
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Graduate Diploma in Human Resource Management  </div>
+                <div class="title">Certificate Programmes ( 3-6 months) </div>
                 <div>
-                    is aimed to equip candidates with agile skills to lead the workforce in organisations.
+                    Wordington Certificate Programme in Nursing Leadership is designed to
+                    develop and establish a strong foundation in selective knowledge,
+                    understanding and application of key nursing leadership concepts.
                 </div>
                 <div>
-                    Wordington graduate diploma programme is suitable for people working
-                    in any profession and is a great opportunity to build up and boost your
-                    HRM skills.
+                    Wordington offers Nursing Leadership Certificate programme to prepare
+                    you for a nursing career in western countries.
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of HRM so as to effectively manage people in
-                    organisations.
-                </div>
-                <div>
-                    The Wordington graduate diploma in HRM comprises of four units which
-                    can be credited towards Wordington Master of Human Resource
-                    Management.
+                    This programme is meant for a successful nursing career and aim to
+                    equip the candidates to be leaders in hospitals and nursing cares.
                 </div>
                 <div class="x-x-x">
-                        The units offered are: <br> <br>
-
-                        Ethics and HRM. <br> <br>
-
-                        Managing Diversity. <br> <br>
-
-                        Managing Effective Decision Making. <br> <br>
-
-                        Managing Teams. <br> <br>
+                    Please click on the below link for more details:
                 </div>
+                <div> <a href="#"> Introduction to Nursing Leadership. </a> </div>
+                <div>  Please <a href="#">email us </a> for more details and fees.</div>
             </div>
         </div>
     </div>
