--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <ul>
                         <li>
-                            <div> <a href="index.html">OUR MODEL</a></div>
+                            <div onclick="scrollToElement('html,body', '.titleOurModel', 0)"> <a href="#"> LOUR MODEL</a> </div>
                         </li>
                         <li>
                             <div onclick="scrollToElement('html,body', '.xxxxx', 0)"> <a href="#"> LEADERSHIP
@@ -128,7 +128,7 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-sm-12 col-md-6 ccc">
-                    <a href="wordington-diploma-in-eadership-programme.html">
+                    <a href="wordington-diploma-in-leadership-programme.html">
                         <div class="image">
                             <img src="image/image2.svg" alt="">
                         </div>
